<resources>
    <string name="app_name">KK追剧</string>
    <string name="abc_login">登录</string>
    <string name="abc_register_account">创建新账号</string>
    <string name="abc_login_title">登录后更精彩</string>
    <string name="abc_register_title">注册新账号</string>
    <string name="abc_register">注册</string>
    <string name="abc_account_digits">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
    <string name="abc_pwd_digits">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890.</string>
    <string name="abc_goto_login">去登录</string>
    <string name="abc_register_success">注册成功!</string>
    <string name="abc_uid">ID:</string>
    <string name="abc_unknown_user_name">昵称未设置</string>
    <string name="abc_sex_women">女</string>
    <string name="abc_sex_men">男</string>
    <string name="abc_complete">完成</string>
    <string name="abc_sex_digits">男女</string>
    <string name="abc_modify_age">修改年龄</string>
    <string name="abc_modify_sex">修改性别</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abc_home">首页</string>
    <string name="abc_discover">发现</string>
    <string name="abc_me">我</string>
    <string name="abc_retry">点我试试</string>
    <string name="search_hint">输入关键词</string>
    <string name="load_more">查看更多</string>
    <string name="none_more">没有更多了</string>
    <string name="about_us">本软件不得用于商业用途，仅用做学习交流。\n Copyright © 2020 KK. </string>
</resources>