<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="vm"
            type="com.ms.kk.module.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_FFFFFF"
        tools:context=".module.register.RegisterActivity">

        <ImageView
            android:id="@+id/ig_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="onFinish"
            app:layout_constraintBottom_toBottomOf="@id/ig_back"
            app:layout_constraintLeft_toLeftOf="@id/ig_back"
            app:layout_constraintRight_toRightOf="@id/ig_back"
            app:layout_constraintTop_toTopOf="@id/ig_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/abc_register_title"
            android:textColor="@color/color_000000"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="200dp"
            android:singleLine="true"
            android:maxLength="15"
            android:digits="@string/abc_account_digits"
            android:hint="账号(大小写字母和数字)"
            android:inputType="textEmailAddress"
            android:text="@={vm.account}"
            android:textColor="@color/color_000000"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:singleLine="true"
            android:maxLength="15"
            android:digits="@string/abc_pwd_digits"
            android:hint="密码(大小写字母、数字和.)"
            android:inputType="textPassword"
            android:text="@={vm.pwd}"
            android:textColor="@color/color_000000"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_account" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:background='@{vm.canLogin?@color/color_0099FF:@color/color_CCCCCC}'
            android:clickable="@{vm.canLogin?true:false}"
            android:onClick="@{()->vm.register()}"
            android:text="@string/abc_register"
            android:textColor="@{vm.canLogin?@color/color_FFFFFF:@color/color_000000}"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:background='@color/color_0099FF'
            android:text="@string/abc_goto_login"
            android:textColor="@color/color_FFFFFF"
            android:textSize="14sp"
            android:onClick="onFinish"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pwd" />

        <TextView
            android:id="@+id/tv_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/abc_register_success"
            android:textColor="@color/color_000000"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{vm.registerSuccess?View.VISIBLE:View.INVISIBLE}"
            app:constraint_referenced_ids="tv_notify,btn_login" />


        <androidx.constraintlayout.widget.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{vm.registerSuccess?View.INVISIBLE:View.VISIBLE}"
            app:constraint_referenced_ids="tv_title,et_account,et_pwd,btn_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>