<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.ms.kk.module.user.sex.EditUserSexViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".module.user.name.EditUserNameActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_hs_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="60dp" />

        <ImageView
            android:id="@+id/ig_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/guide_hs_60"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="onFinish"
            app:layout_constraintBottom_toBottomOf="@id/ig_back"
            app:layout_constraintLeft_toLeftOf="@id/ig_back"
            app:layout_constraintRight_toRightOf="@id/ig_back"
            app:layout_constraintTop_toTopOf="@id/ig_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc_modify_sex"
            android:textColor="@color/color_000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/guide_hs_60"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/color_EEEEEE"
            android:digits="@string/abc_sex_digits"
            android:hint="@string/abc_modify_sex"
            android:inputType="text"
            android:maxLength="1"
            android:minHeight="40dp"
            android:paddingHorizontal="20dp"
            android:text="@={vm.sex}"
            android:textColor="@color/color_000000"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_hs_60" />


        <TextView
            android:id="@+id/tv_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/abc_complete"
            android:textColor="@{vm.canEdit?@color/color_000000:@color/color_777777}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/guide_hs_60"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="@{vm.canEdit}"
            android:onClick="@{()->vm.editSex()}"
            app:layout_constraintBottom_toBottomOf="@id/tv_complete"
            app:layout_constraintLeft_toLeftOf="@id/tv_complete"
            app:layout_constraintRight_toRightOf="@id/tv_complete"
            app:layout_constraintTop_toTopOf="@id/tv_complete" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>